docs/kyverno-policies/tests/security-isolation/require-run-as-nonroot/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
    - name: app
      image: platformacr.azurecr.io/sample:1.0.0
  securityContext:
    runAsNonRoot: true
